--- a/src/Pages/Banner/Banner.css
+++ b/src/Pages/Banner/Banner.css
@@ -1,3 +1,31 @@
 .banner img {
   width: 100%;
 }
+.banner {
+  position: relative;
+}
+
+.search {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.search input {
+  background: #222;
+  padding: 10px;
+  color: #fff;
+  border: none;
+  width: 50%;
+  border-radius: 10px 0px 0px 10px;
+}
+.search button {
+  margin: 10px 0px;
+  background: red;
+  border: none;
+  color: #fff;
+  padding: 10px 30px;
+  font-weight: 700;
+  border-radius: 0px 10px 10px 0px;
+}
