Dynamic Route Set

--- a/src/Pages/Foods/SingleBreakfast/SingleBreakfast.css
+++ b/src/Pages/Foods/SingleBreakfast/SingleBreakfast.css
@@ -32,3 +32,16 @@
   color: red;
   font-weight: 600;
 }
+.breakfast-item button {
+  padding: 10px 15px;
+  background: red;
+  color: #fff;
+  border: 2px solid red;
+  border-radius: 10px;
+  font-weight: 600;
+  margin: 15px 0px;
+  transition: 0.3s;
+}
+.breakfast-item button:hover {
+  background: #262626;
+}
