--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -15,7 +15,7 @@
   border: 2px solid red;
   border-radius: 10px;
   font-weight: 600;
-  margin: 15px 0px;
+  margin: 5px 0px;
   transition: 0.3s;
   width: 50%;
 }
@@ -28,4 +28,7 @@
   border-radius: 10px;
   padding: 10px;
   border: none;
+}
+.form-item a {
+  display: block;
 }
