--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -44,4 +44,10 @@ a.cartIcon img {
   color: #222222;
   font-size: 14px;
   font-weight: 600;
+  border: 2px solid #858585;
+}
+.main-menu ul li img {
+  width: 50px;
+  border-radius: 50%;
+  border: 2px solid red;
 }
